<resources>
    <string name="cit_label">Hardware tests</string>
    <string name="cit_name">Hardware tests</string>
    <string name="cit_pass">Pass</string>
    <string name="cit_fail">Fail</string>
    <string name="cit_tool">Additional tools</string>
    <string name="cit_hide_menu">Hide menu</string>
    <string name="cit_not_available">"This test isn't available on this version of MIUI"</string>
    <string name="cit_version_check_title">Check version info</string>
    <string name="cit_sim_check_title">SIM card</string>
    <string name="cit_keyboard_test_title">Buttons</string>
    <string name="cit_pointer_location_title">Touch sensor</string>
    <string name="cit_leds_check_title">Notification light (LED)</string>
    <string name="cit_display_check_title">Display</string>
    <string name="cit_vibrator_check_title">Vibration</string>
    <string name="cit_wifi_address_check_title">WLAN address</string>
    <string name="cit_wifi_ap_scan_check_title">WLAN AP scan</string>
    <string name="cit_blue_tooth_address_check_title">Get Bluetooth address</string>
    <string name="cit_blue_tooth_scan_check_title">Bluetooth scan</string>
    <string name="cit_accelermeter_sensor_check_title">Accelerometer</string>
    <string name="cit_magnetic_sensor_check_title">Magnetic sensor</string>
    <string name="cit_proximity_sensor_check_title">Proximity sensor</string>
    <string name="cit_light_sensor_check_title">Light sensor</string>
    <string name="cit_pressure_sensor_check_title">Pressure sensor</string>
    <string name="cit_gyroscope_sensor_check_title">Gyroscope</string>
    <string name="cit_play_sd_mp3_title">Play MP3 stored on SD card</string>
    <string name="cit_play_sd_mp3_hifi_title">Play MP3(HIFI) stored on SD card</string>
    <string name="cit_audio_loopback_check_one_title">Main microphone receiver feedback test</string>
    <string name="cit_audio_loopback_check_two_title">Secondary microphone speaker feedback test</string>
    <string name="cit_audio_loopback_dualmic_earpiece_title">Ambient noise reduction test</string>
    <string name="cit_audio_lb_backmic_to_speaker_title">Back mic speaker feedback test</string>
    <string name="cit_audio_lb_mainmic_to_earpiece_title">Main mic speaker feedback test</string>
    <string name="cit_audio_lb_phonecall_title">Simulation call test</string>
    <string name="cit_audio_lb_topmic_to_speaker_title">Top mic speaker feedback test</string>
    <string name="cit_headset_plug_detect_title">Headphone detection (connect)</string>
    <string name="cit_headset_button_check_title">Headphone buttons</string>
    <string name="cit_headset_loopback_check_title">Headphone mic feedback test</string>
    <string name="cit_headset_pull_detect_title">Headphone detection (disconnect)</string>
    <string name="cit_charger_plugin_check_title">Charger (connect)</string>
    <string name="cit_charger_plugout_check_title">Charger (disconnect)</string>
    <string name="cit_main_camera_check_title">Rear camera</string>
    <string name="cit_front_camera_check_title">Front camera</string>
    <string name="cit_sd_plugin_check_title">SD card (detection)</string>
    <string name="cit_sd_plugout_check_title">SD card (removal)</string>
    <string name="cit_gps_check_title">GPS</string>
    <string name="cit_fm_check_title">FM Radio</string>
    <string name="cit_power_check_title">Battery indicator</string>
    <string name="cit_reset_check_title">Reboot test</string>
    <string name="cit_OTG_plugin_check_title">OTG (detection)</string>
    <string name="cit_OTG_plugout_check_title">OTG (removal)</string>
    <string name="cit_tool_bluetooth_dut">Enter bluetooth test mode</string>
    <string name="cit_tool_bluetooth_le_tx_h">Enter bluetooth low-power dissipation (2.480GHz) mode</string>
    <string name="cit_tool_bluetooth_le_tx_l">Enter bluetooth low-power dissipation (2.402GHz) mode</string>
    <string name="cit_tool_bluetooth_not_on">BlueTooth function is not on !!</string>
    <string name="cit_tool_bluetooth_tx_h">Enter bluetooth single sound test（2.480GHz) mode</string>
    <string name="cit_tool_bluetooth_tx_l">Enter bluetooth single sound test（2.402GHz）mode</string>
    <string name="cit_tool_modem">MODEM test tools</string>
    <string name="cit_tool_modem_offline_log">Open/Close Offline Log</string>
    <string name="cit_tool_modem_exit_ftm">Exit FTM mode</string>
    <string name="cit_tool_modem_bugreport">Force MODEM Coredump</string>
    <string name="cit_tool_nfc">NFC test tools</string>
    <string name="cit_tool_nfc_st">Nfc ST:</string>
    <string name="cit_tool_nfc_st_confreq">freq:</string>
    <string name="cit_tool_nfc_st_run">Run</string>
    <string name="cit_tool_nfc_st_stop">Stop</string>
    <string name="cit_tool_wifi_band_24">band: 2.4G</string>
    <string name="cit_tool_wifi_band_5">band: 5G</string>
    <string name="cit_tool_wifi_band_change">Next</string>
    <string name="cit_tool_wifi_rx_dut_ip">192.168.1.12</string>
    <string name="cit_tool_wifi_rxbg_test">Rx:B/G</string>
    <string name="cit_tool_wifi_rxbg_test_channel">chan:</string>
    <string name="cit_tool_wifi_rxbg_test_datarate">rate:</string>
    <string name="cit_tool_wifi_rxn_test">Rx:N</string>
    <string name="cit_tool_wifi_rxn_test_channel">chan:</string>
    <string name="cit_tool_wifi_rxn_test_mcs">MCS:</string>
    <string name="cit_tool_wifi_tx_n_bandwidth">bandwidth:</string>
    <string name="cit_tool_wifi_tx_st">Tx: ST</string>
    <string name="cit_tool_wifi_tx_st_chan">channel:</string>
    <string name="cit_touch_calib_title">Touch Calibration</string>
    <string name="cit_touch_calib_summary">Next step will do touch calibration, press confirm button and do not touch screen after it, wait for calibration success hint</string>
    <string name="cit_touch_calib_pass">Touch Calibration pass, Please use it normally</string>
    <string name="cit_touch_calib_fail">Touch Calibration failed, Please retry</string>
    <string name="cit_touch_calib_instruction">start calibration</string>
    <string name="cit_version_check_summary">Below is OS version info. Confirm that the info highlighted in green is correct.</string>
    <string name="cit_proximity_sensor_check_summary">"Cover the proximity sensor (located at the top of the phone near the receiver) with your hand, then move your hand away. The value should increase from 0.0 when you move your hand further away from the device.
When calibrating, make sure there's nothing between the sensor and your hand (e.g. protective screen cover or gloves)."</string>
    <string name="cit_magnetic_sensor_check_summary">Values for X，Y，Z, coordinates should appear below</string>
    <string name="cit_light_sensor_check_summary">DAC value should appear below</string>
    <string name="cit_gyroscope_sensor_check_summary">Values for X，Y，Z, coordinates should appear below</string>
    <string name="cit_pressure_sensor_check_summary">Value for pressure should appear below</string>
    <string name="cit_leds_check_summary">Backlight, notification light, and flash light (rear), should respond when corresponding button is pressed.</string>
    <string name="cit_vibrator_check_summary">See if vibration (long and short) is functioning normally</string>
    <string name="cit_wifi_address_check_summary">Below is the address of the WLAN network that the phone is currently connected to. Confirm that the info highlighted in green is correct.</string>
    <string name="cit_wifi_ap_scan_check_summary">Below is the WLAN AP info of the devices in the area that were detected. Confirm that the info highlighted in green is correct.</string>
    <string name="cit_blue_tooth_address_check_summary">The Bluetooth address of this device should be displayed below.</string>
    <string name="cit_blue_tooth_scan_check_summary">Below is the info of the Bluetooth devices that were detected nearby.</string>
    <string name="cit_accelermeter_sensor_check_summary">"Move the device quickly in one direction. X，Y，Z coordinate values are displayed below. (when phone is in motion: X is represents left/right, y represents front/back, z represents up and down).
Before you calibrate the device, place it on a flat surface."</string>
    <string name="cit_headset_plug_detect_summary">When headphones are connected, the text \"Headphones detected\" should be displayed below.</string>
    <string name="cit_headset_button_check_summary">When headphones are connected, press the buttons on the headphone remote (often located on the cord). The corresponding text on screen should turn green.</string>
    <string name="cit_headset_pull_detect_summary">When headphones are disconnected, the text \"Headphones have been disconnected\" should be displayed below</string>
    <string name="cit_sim_check_summary">Confirm that correct the status and info of the SIM card is displayed below</string>
    <string name="cit_reset_check_summary">This test will reboot the device. All previous test data will be lost.</string>
    <string name="cit_audio_loopback_check_summary_first">"Main microphone receiver feedback test

Hold the phone as if you are making a call, speak into the microphone and should hear your voice in the receiver."</string>
    <string name="cit_audio_loopback_check_summary_second">"Secondary microphone speaker feedback test.

Turn the phone so that the headphone input is facing downward. Speak into the receiver. You should hear your voice played through the external speaker."</string>
    <string name="cit_audio_loopback_summary_dualmic_earpiece">"Ambient noise reduction test

Hold the phone as if you're answering a call, speak in to the microphone. You should hear your voice with reduced noise in the background played through the receiver."</string>
    <string name="cit_vibrator_short">Short vibration</string>
    <string name="cit_vibrator_long">Long vibration</string>
    <string name="cit_vibrator_show_advanced">Show advanced options</string>
    <string name="cit_vibrator_don_don_chat">Don-Don-Chat</string>
    <string name="cit_vibrator_haptic">Haptic</string>
    <string name="cit_vibrator_load_down_pattern">Down Pattern</string>
    <string name="cit_vibrator_load_up_pattern">Up Pattern</string>
    <string name="cit_vibrator_play_touch_pattern">Vibration</string>
    <string name="cit_headset_plug_hint">Connect headphones now</string>
    <string name="cit_headset_button_play_pause">Play/Pause</string>
    <string name="cit_headset_button_next">Next</string>
    <string name="cit_headset_button_previous">Previous</string>
    <string name="cit_lcdlight_brightness">Backlight</string>
    <string name="cit_lcdlight_brightness_max">MAX</string>
    <string name="cit_lcdlight_brightness_min">MIN</string>
    <string name="cit_batterylight_rgb">Battery light</string>
    <string name="cit_batterylight_red">Red</string>
    <string name="cit_batterylight_green">Green</string>
    <string name="cit_batterylight_blue">Blue</string>
    <string name="cit_torch_on">Turn on flash light</string>
    <string name="cit_torch_off">Turn off flash light</string>
    <string name="cit_button_light_on">Buttons light on</string>
    <string name="cit_keyboard_back">Button: BACK</string>
    <string name="cit_keyboard_menu">Button: MENU</string>
    <string name="cit_kayboard_volume_up">Button: VOLUME UP</string>
    <string name="cit_kayboard_volume_down">Button: VOLUME DOWN</string>
    <string name="cit_tool_wifi_tx_bg">Tx:B/G</string>
    <string name="cit_tool_wifi_tx_bg_chan">channel:</string>
    <string name="cit_tool_wifi_tx_bg_txpr">txpower:</string>
    <string name="cit_tool_wifi_tx_bg_txrt">datarate:</string>
    <string name="cit_tool_wifi_rx_ap">Rx:AP</string>
    <string name="cit_tool_wifi_rx_run">Run</string>
    <string name="cit_tool_wifi_rx_ap_name">MT</string>
</resources>