<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_lcdlight_brightness" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
        <Button android:gravity="center" android:id="@id/btn_lcd_light_min" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_lcdlight_brightness_min" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_lcdlight_brightness" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
        <Button android:gravity="center" android:id="@id/btn_lcd_light_max" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_lcdlight_brightness_max" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_batterylight_rgb" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
        <Button android:gravity="center" android:id="@id/btn_red_battery" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_batterylight_red" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_batterylight_rgb" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
        <Button android:gravity="center" android:id="@id/btn_green_battery" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_batterylight_green" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_batterylight_rgb" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
        <Button android:gravity="center" android:id="@id/btn_blue_battery" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_batterylight_blue" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_torch_on" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
        <Button android:gravity="center" android:id="@id/btn_torch" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_torch_off" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_button_light_on" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
        <Button android:gravity="center" android:id="@id/btn_button_light" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cit_button_light_on" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>