<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/btn_vibrate_short" android:layout_width="200.0dip" android:layout_height="wrap_content" android:text="@string/cit_vibrator_short" />
    <Button android:id="@id/btn_vibrate_long" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/cit_vibrator_long" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <Button android:id="@id/btn_vibrate_show_advanced" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cit_vibrator_show_advanced" />
        <Button android:id="@id/btn_vibrate_don_don_chat" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cit_vibrator_don_don_chat" />
        <Button android:id="@id/btn_vibrate_haptic" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cit_vibrator_haptic" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <EditText android:id="@id/down_pattern" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
                    <Button android:id="@id/btn_vibrate_load_down_pattern" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cit_vibrator_load_down_pattern" />
                </LinearLayout>
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <EditText android:id="@id/up_pattern" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1.0" />
                    <Button android:id="@id/btn_vibrate_load_up_pattern" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cit_vibrator_load_up_pattern" />
                </LinearLayout>
            </LinearLayout>
            <Button android:id="@id/btn_vibrate_play_touch_pattern" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cit_vibrator_play_touch_pattern" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>