<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:gravity="center" android:id="@id/cit_cur_key" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" style="?android:attr/textAppearanceMedium" />
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:gravity="center" android:id="@id/cit_keyboard_back" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cit_keyboard_back" style="?android:attr/textAppearanceSmall" />
        <TextView android:gravity="center" android:id="@id/cit_keyboard_menu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cit_keyboard_menu" style="?android:attr/textAppearanceSmall" />
        <TextView android:gravity="center" android:id="@id/cit_keyboard_volume_up" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cit_kayboard_volume_up" style="?android:attr/textAppearanceSmall" />
        <TextView android:gravity="center" android:id="@id/cit_keyboard_volume_down" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/cit_kayboard_volume_down" style="?android:attr/textAppearanceSmall" />
    </LinearLayout>
</LinearLayout>