<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/list_item_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left|center" android:layout_width="60.0dip" android:layout_height="90.0dip" android:text="@string/cit_tool_wifi_tx_st" />
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="150.0dip" android:layout_height="90.0dip">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cit_tool_wifi_tx_st_chan" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/tx_st_channel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="1" android:inputType="number" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="120.0dip" android:layout_height="90.0dip">
        <Button android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:layout_gravity="right|center" android:id="@id/tx_st_run_stop" android:layout_width="80.0dip" android:layout_height="60.0dip" android:text="@string/cit_tool_wifi_rx_run" />
    </LinearLayout>
</LinearLayout>