<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/list_item_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left|center" android:layout_width="60.0dip" android:layout_height="wrap_content" android:text="@string/cit_tool_nfc_st" />
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="180.0dip" android:layout_height="150.0dip">
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
            <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cit_tool_nfc_st_confreq" />
            <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/nfc_singletone_config_frequency" android:layout_width="90.0dip" android:layout_height="fill_parent" android:hint="37400" android:inputType="number" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:layout_width="120.0dip" android:layout_height="fill_parent">
        <Button android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:layout_gravity="right|center" android:id="@id/nfc_st_run_stop" android:layout_width="80.0dip" android:layout_height="60.0dip" android:text="@string/cit_tool_nfc_st_run" />
    </LinearLayout>
</LinearLayout>