<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/list_item_background" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="left|center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cit_tool_wifi_rxn_test" />
    <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="100.0dip" android:layout_height="100.0dip">
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cit_tool_wifi_rxn_test_channel" />
                <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/cit_tool_wifi_rx_n_channel_input" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="1" android:inputType="number" />
            </LinearLayout>
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/cit_tool_wifi_rxn_test_mcs" />
                <EditText android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:id="@id/cit_tool_wifi_rx_n_mcs_input" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="3" android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/rx_cnt_packet" android:layout_width="100.0dip" android:layout_height="50.0dip" />
        <Button android:textAppearance="?android:textAppearanceMedium" android:gravity="center" android:layout_gravity="right|center" android:id="@id/rxn_cnt_run_stop" android:layout_width="80.0dip" android:layout_height="50.0dip" android:text="@string/cit_tool_wifi_rx_run" />
    </LinearLayout>
</LinearLayout>